--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <title>Excursion</title>
-      <link rel="stylesheet" href="resources/css/style.css"
+      <link rel="stylesheet" href="resources/css/style.css">
     </head>
       <body>
         <header>
