edited website according to mock

--- a/index.html
+++ b/index.html
@@ -6,7 +6,32 @@
     </head>
       <body>
         <header>
-          <p>Discover hidden places in the world around you</p>
+          <h1>Discover hidden places in the world around you</p>
+          <div class="link">
+            <p>Download Excursion (Coming soon!)</p>
+          </div>
+          <div class="video">
+            <video autoplay muted loop>
+              <source src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video> 
+          </div>
+          <div class="explain">
+            <h1>Your personal travel guide</h1>
+            <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+          </div>
+          <div>
+            <img src="resources/images/landscapeimage.webp" alt="Campsite">
+            <img src="resources/images/phone.webp" alt="phone symbol">
+          </div>
+          <div class="explain">
+            <h1>Coming Soon for iPhone and Android</h1>
+          </div>
+          <div class="link">
+            <p class="link">Download Excursion (Coming soon!)</p>
+          </div>
+      
+  
         </header>
       </body>
   </html>
