--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
           <div class="link">
             <p class="link">Download Excursion (Coming soon!)</p>
           </div>
-      
+          <div class="footer">
+            <p>&copy Excursion</p>
+          </div>
   
         </header>
       </body>
